@@ -1,3 +1,10 @@
+2017-08-14 Richard Larsson  <ric.larsson@gmail.com>
+
+	* arts-2-3-762
+	
+	* src/m_linemixing.cc:  Fixed jacobian-interface bug when no 
+	temperature jacobian... 
+
 2017-08-16 Jana Mendrok  <jana.mendrok@chalmers.se>
 
 	* arts-2-3-761
